--- a/rpt/patient_examination_subreport.jrxml
+++ b/rpt/patient_examination_subreport.jrxml
@@ -33,14 +33,23 @@ ORDER BY PEX_DATE DESC LIMIT 1]]></queryString>
 	<field name="PEX_ID" class="java.lang.Integer"/>
 	<field name="PEX_DATE" class="java.sql.Timestamp"/>
 	<field name="PEX_PAT_ID" class="java.lang.Integer"/>
-	<field name="PEX_HEIGHT" class="java.lang.Double"/>
-	<field name="PEX_WEIGHT" class="java.lang.Integer"/>
-	<field name="PEX_PA_MIN" class="java.lang.Integer"/>
-	<field name="PEX_PA_MAX" class="java.lang.Integer"/>
-	<field name="PEX_FC" class="java.lang.Integer"/>
+	<field name="PEX_HEIGHT" class="java.lang.Integer"/>
+	<field name="PEX_WEIGHT" class="java.lang.Double"/>
+	<field name="PEX_AP_MIN" class="java.lang.Integer"/>
+	<field name="PEX_AP_MAX" class="java.lang.Integer"/>
+	<field name="PEX_HR" class="java.lang.Integer"/>
 	<field name="PEX_TEMP" class="java.lang.Double"/>
 	<field name="PEX_SAT" class="java.lang.Double"/>
+	<field name="PEX_HGT" class="java.lang.Integer"/>
+	<field name="PEX_DIURESIS" class="java.lang.Integer"/>
+	<field name="PEX_DIURESIS_DESC" class="java.lang.String"/>
+	<field name="PEX_BOWEL_DESC" class="java.lang.String"/>
 	<field name="PEX_NOTE" class="java.lang.String"/>
+	<field name="PEX_CREATED_BY" class="java.lang.String"/>
+	<field name="PEX_CREATED_DATE" class="java.sql.Timestamp"/>
+	<field name="PEX_LAST_MODIFIED_BY" class="java.lang.String"/>
+	<field name="PEX_LAST_MODIFIED_DATE" class="java.sql.Timestamp"/>
+	<field name="PEX_ACTIVE" class="java.lang.Boolean"/>
 
 		<background>
 			<band height="0"  isSplitAllowed="true" >
@@ -78,7 +87,7 @@ ORDER BY PEX_DATE DESC LIMIT 1]]></queryString>
 					<textElement>
 						<font size="8"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.Double"><![CDATA[$F{PEX_HEIGHT}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PEX_HEIGHT}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
@@ -98,7 +107,7 @@ ORDER BY PEX_DATE DESC LIMIT 1]]></queryString>
 					<textElement>
 						<font size="8"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PEX_WEIGHT}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.Double"><![CDATA[$F{PEX_WEIGHT}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
@@ -138,7 +147,7 @@ ORDER BY PEX_DATE DESC LIMIT 1]]></queryString>
 					<textElement>
 						<font size="8"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PEX_PA_MIN}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PEX_AP_MIN}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
@@ -279,7 +288,7 @@ ORDER BY PEX_DATE DESC LIMIT 1]]></queryString>
 					<textElement>
 						<font size="8"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PEX_PA_MAX}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PEX_AP_MAX}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
@@ -299,7 +308,7 @@ ORDER BY PEX_DATE DESC LIMIT 1]]></queryString>
 					<textElement>
 						<font size="8"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PEX_FC}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PEX_HR}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
