Improved oldest date guessing in Clinical Sheet
Some code cleaning

--- a/rpt/patient_clinical_sheet_ver3.jrxml
+++ b/rpt/patient_clinical_sheet_ver3.jrxml
@@ -127,6 +127,7 @@ SELECT "Laboratory" AS TYPE,
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
 	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+	AND EXA_PROC = 2
 GROUP BY LABR_LAB_ID
 
 
